@@ -22,7 +22,7 @@ export(svydesign, svrepdesign, as.svrepdesign,twophase, postStratify,
        psrsq, svysurvreg, cal_names, svycralpha, svyivreg, svynls, svyscoretest,
        oldsvyquantile,svyqqplot, svyqqmath, svybys, svygofchisq,
        poisson_sampling,ppscov,
-       xdesign)
+       xdesign, svysmoothArea,svysmoothUnit)
 
 S3method(svyloglin,survey.design)
 S3method(svyloglin,svyrep.design)
@@ -531,3 +531,12 @@ S3method(postStratify,pps)
 S3method(svycontrast,svyolr)
 S3method(svylogrank,twophase2)
 S3method(svytotal,xdesign)
+
+S3method(svysmoothArea, survey.design)
+S3method(svysmoothArea, default)
+S3method(svysmoothUnit, survey.design)
+S3method(svysmoothUnit, default)
+S3method(summary, svysae)
+
+       
+         
