@@ -133,3 +133,6 @@ the MASS package of Venables & Ripley, and parts of the code for svycoxph() are 
 from Therneau's survival package.
 
 The C++ code for variances was contributed by Ben Schneider
+
+The small-area estimation code calls the SUMMER package, and comes from Peter Gao,
+Jon Wakefield, and Richard Li.
