@@ -3,6 +3,9 @@
 	A PPS variance matrix can now be specified as phase two of a two-phase design.
 	This includes poisson_sampling() as a model for non-response (for Pam Shaw, Jasper Yang)
 
+	svysmoothUnit() and svysmoothArea() as an interface to the SUMMER package for small-area
+	estimation (Peter Gao, Jon Wakefield, Richard Li)
+
 4.3	Added Ben Schneider's C++ code for multistage variances. It is currently controlled
 	by options(survey.use_rcpp), which defaults to TRUE
 
